gitops/manifests/api-node/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-node
  namespace: app-api-node
spec:
  selector:
    app: api-node
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
